# SoftEngine

./: .gitmodules  CMakeLists.txt  LICENSE  constrain.hpp  group.hpp  main.cpp  point.hpp  rect2.hpp  types.hpp  utils.hpp  vector2.hpp  world.cpp  world.hpp
constrain/: constrain.hpp  constrain_def.hpp  constrain_flags.hpp  constrain_id.hpp  constrain_proxy.hpp
edge/: edge.hpp  edge_def.hpp  edge_id.hpp  edge_proxy.hpp
group/: group.hpp  group_def.hpp  group_id.hpp  group_proxy.cpp  group_proxy.hpp
point/: point.hpp  point_def.hpp  point_flags.hpp  point_id.hpp  point_proxy.hpp
shell/: shell.hpp  shell_def.hpp  shell_proxy.hpp
src/: world.cpp  world.hpp
src/constrain/: constrain.hpp  constrain_def.hpp  constrain_proxy.hpp
src/edge/: edge_proxy.hpp
src/group/: group.hpp  group_proxy.cpp  group_proxy.hpp
src/point/: point_proxy.hpp
src/shell/: shell.hpp
src/utils/: geometry_utils.hpp  rect2.hpp  types.hpp  utils.hpp  vector2.hpp
utils/: geometry_utils.hpp  types.hpp
